// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoViewer should render the viewer 1`] = `
<div>
  <div
    class="styles__viewer-noviewer___auG-6"
  >
    <svg
      class="styles__icon___23x3R"
      height="140"
      viewBox="0 0 32 32"
      width="160"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M3 2.002C3 .896 3.89 0 4.997 0H22l7 7v22.996A2 2 0 0127.003 32H4.997A1.995 1.995 0 013 29.998V2.002z"
          fill="#D1D5DB"
        />
        <path
          d="M21.5 0c-.276 0-.5.23-.5.5V8h7.5c.276 0 .5-.232.5-.5V7l-7-7h-.5z"
          fill="#A3ACB8"
        />
      </g>
    </svg>
    <p
      class="styles__viewer-filename___3jZCt"
    >
      notSupported.xyz
    </p>
    <button
      class="styles__c-btn___3kXsk styles__c-btn--center___Nny0n"
      type="submit"
    >
      <span>
        <span>
          Download
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`NoViewer should render the viewer with specific extra content 1`] = `
<div>
  <div
    class="styles__viewer-noviewer___auG-6"
  >
    <svg
      class="styles__icon___23x3R"
      height="140"
      viewBox="0 0 32 32"
      width="160"
    >
      <g
        fill="none"
        fill-rule="evenodd"
      >
        <path
          d="M3 2.002C3 .896 3.89 0 4.997 0H22l7 7v22.996A2 2 0 0127.003 32H4.997A1.995 1.995 0 013 29.998V2.002z"
          fill="#D1D5DB"
        />
        <path
          d="M21.5 0c-.276 0-.5.23-.5.5V8h7.5c.276 0 .5-.232.5-.5V7l-7-7h-.5z"
          fill="#A3ACB8"
        />
      </g>
    </svg>
    <p
      class="styles__viewer-filename___3jZCt"
    >
      notSupported.xyz
    </p>
    <div>
      with specific extra content
    </div>
  </div>
</div>
`;
